{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "e1ecdd4f-e40d-4849-9c18-9b8b9f5f4840",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "4d265b44-b408-4f18-af28-3f2ce2062bc8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "120db9a4-1be9-4fe5-b76b-12ffb7406b5b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Guard",
                    "type": "Button",
                    "id": "d8992b18-a3b4-4294-bd27-e6e70a4da372",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b417d5bd-5fb4-4a20-85c5-c9f33cb83b4f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "126d6f12-c53a-4399-83cc-68ec05819cd0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a29fbaf-c130-453b-8a54-2a990da3b26c",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Guard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}